fix: expandable paragraph icon background not visible in higher contrast (fixes SFKUI-7576)

--- a/packages/design/src/components/expandable-paragraph/_expandable-paragraph.scss
+++ b/packages/design/src/components/expandable-paragraph/_expandable-paragraph.scss
@@ -33,6 +33,7 @@ $EXPANDABLE_PARAGRAPH_LINE_HEIGHT: var(--f-line-height-medium);
 
         margin-top: calc((#{$EXPANDABLE_PARAGRAPH_LINE_HEIGHT} * 1em - #{$ICON_WIDTH}) / 2); // Unit "em" intended here, align icon to header
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+        outline: 2px solid transparent;
         display: flex;
         color: $expandable-paragraph-icon-color-content;
         padding: 3px; // cross icon size
